# Mini_Dynamo

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  tests.txt
.github/workflows/: ci.yml  deploy.yml
bench/: RESULTS.md  chaos.sh  load.js  run.sh
bench/scale/: RESULTS.md  k6_uniform.js  scale_test.sh
config/: node_config.json
deploy/aws/: .env.example  README.md  bootstrap.sh
deploy/grafana/dashboards/: mini-dynamo.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: datasource.yml
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
deploy/swarm/: deploy.sh  docker-stack.yml  init-swarm.sh  prometheus-swarm.yml
docs/: build_plan.md  focused_arch.md  full_arch.md  roadmap.md  scalability-constraints.md
docs/decisions/: tier-0.md  tier-1a.md  tier-1b.md  tier-1c.md  tier-1d.md  tier-2.md  tier-3.md  tier-4.1.md  tier-4.2.md  tier-4.3.md  tier-4.4.md  tier-4.5.md  tier-4.6.md  tier-4.7.md  tier-testing.md
docs/plans/: tier-4.4.md  tier-4.5.md
docs/runbooks/: ec2-deploy.md  local-dev.md
gateway/: Dockerfile  README.md  pom.xml
gateway/src/main/java/com/minidynamo/gateway/: GatewayApplication.java
gateway/src/main/java/com/minidynamo/gateway/cluster/: ClusterClient.java  ClusterUnavailableException.java  HashUtil.java  ReadResult.java  RingNode.java  RingPoller.java  RingRouter.java  ValueVersion.java  WriteResult.java
gateway/src/main/java/com/minidynamo/gateway/config/: AuthProperties.java  ClusterProperties.java  JwtProperties.java  OpenApiConfig.java  SecurityConfig.java
gateway/src/main/java/com/minidynamo/gateway/controller/: AuthController.java  ClusterController.java  KvController.java
gateway/src/main/java/com/minidynamo/gateway/dto/: ApiError.java  KvValueResponse.java  KvWriteRequest.java  NodeDto.java  RingNodeDto.java  SiblingsResponse.java  TokenRequest.java  TokenResponse.java  WriteResponse.java
gateway/src/main/java/com/minidynamo/gateway/entity/: AuditLogEntity.java  ConfigVersionEntity.java  NodeEntity.java
gateway/src/main/java/com/minidynamo/gateway/exception/: ClusterProtocolException.java  GlobalExceptionHandler.java  KeyNotFoundException.java  QuorumNotMetException.java  SiblingsConflictException.java
gateway/src/main/java/com/minidynamo/gateway/repository/: AuditLogRepository.java  ConfigVersionRepository.java  NodeRepository.java
gateway/src/main/java/com/minidynamo/gateway/security/: JwtAuthFilter.java  JwtService.java
gateway/src/main/java/com/minidynamo/gateway/service/: AuthService.java  ClusterService.java  KvService.java  NodeRegistryService.java
gateway/src/main/java/com/minidynamo/gateway/web/: RequestIdFilter.java
gateway/src/main/resources/: application.yml  logback-spring.xml
gateway/src/main/resources/db/migration/: V1__init.sql
gateway/src/test/java/com/minidynamo/gateway/: GatewayIntegrationTest.java  RealClusterIT.java
gateway/src/test/java/com/minidynamo/gateway/cluster/: ClusterClientTest.java  HashUtilTest.java  RingRouterTest.java
gateway/src/test/java/com/minidynamo/gateway/security/: JwtServiceTest.java
gateway/src/test/java/com/minidynamo/gateway/service/: KvServiceTest.java
gateway/src/test/java/com/minidynamo/gateway/support/: FakeClusterServer.java  InMemoryClusterHandler.java
scripts/: dev-test.sh  e2e.sh  leave.sh
src/: base64.cpp  base64.h  coordinator.cpp  coordinator.h  hash.cpp  hash.h  log.cpp  log.h  main.cpp  message.cpp  message.h  metrics.h  metrics_prometheus.cpp  metrics_prometheus.h  node.cpp  node.h  node_info.h  replica_client.h  replica_ops.cpp  replica_ops.h  router.cpp  router.h  util.h  vector_clock.cpp  vector_clock.h  versioned_value.cpp  versioned_value.h
src/antientropy/: antientropy_thread.cpp  antientropy_thread.h  merkle_tree.cpp  merkle_tree.h
src/gossip/: gossip_thread.cpp  gossip_thread.h  member_event.cpp  member_event.h  swim.cpp  swim.h
src/hints/: handoff_thread.cpp  handoff_thread.h  hint_store.cpp  hint_store.h
src/net/: connection_pool.cpp  connection_pool.h  framing.cpp  framing.h  pooled_replica_client.cpp  pooled_replica_client.h  tcp_client.cpp  tcp_client.h  tcp_connect.cpp  tcp_connect.h  tcp_replica_client.cpp  tcp_replica_client.h  tcp_server.cpp  tcp_server.h  thread_pool.cpp  thread_pool.h
src/storage/: in_memory_storage.cpp  in_memory_storage.h  rocksdb_storage.cpp  rocksdb_storage.h  storage_engine.h
tests/: CMakeLists.txt  base64_test.cpp  cluster_test.cpp  connection_pool_test.cpp  coordinator_test.cpp  hash_test.cpp  hint_store_test.cpp  merkle_tree_test.cpp  multi_host_smoke.sh  node_id_test.cpp  rocksdb_storage_test.cpp  router_test.cpp  swim_test.cpp  thread_pool_test.cpp  vector_clock_property_test.cpp  vector_clock_test.cpp  versioned_value_test.cpp
tests/support/: in_process_cluster.h
